# Online-Exam-Management-System

./: README.md  pyproject.toml
backend/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 27af32260804_added_user_models.py  2bccc0f56c3f_.py  74326685eca6_updated_user_models.py  7e8a30b3addf_initial_schema_creation_with_enums.py  869ffcbff956_updated_user_models.py
backend/auth/: dependencies.py  exceptions.py  middleware.py  models.py  routes.py  schemas.py  services.py  utils.py
backend/conf/: config.py  database.py  utils.py
backend/exam/: models.py  routes.py  schemas.py  services.py
backend/result/: models.py  routes.py  schemas.py  services.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axiosClient.js
frontend/src/components/common/: AuthInput.jsx
frontend/src/components/home/: Features.jsx  Hero.jsx
frontend/src/components/layout/: Footer.jsx  Header.jsx
frontend/src/hooks/auth/: useGetcurrentUser.js  useSigninUser.js  useSignupUser.js
frontend/src/hooks/exam/: useAvailableExams.js  useCreateExam.js  useCreateQuestion.js  useImportQuestions.js  useListQuestions.js  useSingleQuestion.js  useUpdateExam.js
frontend/src/pages/: AccessDenied.jsx  NotFound.jsx
frontend/src/pages/auth/: SignIn.jsx  SignUp.jsx
frontend/src/pages/dashboard/admin/: AdminDashboard.jsx
frontend/src/pages/dashboard/admin/_components/: ExamCreator.jsx  QuestionBank.jsx  (+2 more)
frontend/src/pages/home-page/: Homepage.jsx
frontend/src/routes/: AppRoutes.jsx  PrivateRoutes.jsx
